--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [Hanie's Portfolio]
-description: [A short description of your site's purpose]
+description: [Below are the projects that I have done while studying for my Master's degree of Business Analytics at Macquarie University]
 
 
